fluentd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fluentd
spec:    
  containers:
  - image: fluentd
    name: fluentd
    volumeMounts:
    - mountPath: /var/lib/docker/containers
      name: varlibdockercontainers
    - mountPath: /var/log
      name: varlog
  volumes:
  - name: varlibdockercontainers
    hostPath:
      path: /var/lib/docker/containers
  - name: varlog
    hostPath:
      path: /var/log
