weblog.yaml
apiVersion: v1
kind: Pod
metadata:
  name: weblog
spec:
  containers:
  - image: nginx:1.17
    name: web
    volumeMounts:
    - mountPath: /var/log/nginx
      name: weblog
  - image: busybox
    args: [/bin/sh, -c, "tail -n+1 -f /data/access.log"]
    name: log
    volumeMounts:
    - mountPath: /data
      name: weblog    
      readOnly: true    
  volumes:
  - name: weblog
    emptyDir: {}
