front-end-nodesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-nodesvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30200      
  selector:
    run: nginx
  type: NodePort
